Rename "autoload" to "bootstrap" and allow specifying a separate URL

--- a/packages/@stimulus/ajax/demo/index.html
+++ b/packages/@stimulus/ajax/demo/index.html
@@ -26,7 +26,10 @@
     </style>
   </head>
   <body>
-    <div class="boosts" data-controller="resource" data-resource-url="/boosts" data-resource-autoload>
+    <div class="boosts"
+      data-controller="resource"
+      data-resource-url="/boosts"
+      data-resource-bootstrap-url="/boosts?delay=0">
     </div>
   </body>
 </html>
